--- a/movieDBapp/Base.lproj/Main.storyboard
+++ b/movieDBapp/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="FtT-2g-b1c">
-    <device id="retina4_7" orientation="landscape">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,15 +15,15 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="PopularMoviesViewController" customModule="movieDBapp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="T9G-0J-8F1">
-                                <rect key="frame" x="0.0" y="32" width="667" height="287"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="547"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="isk-sj-tUK">
-                                <rect key="frame" x="0.0" y="319" width="667" height="56"/>
+                                <rect key="frame" x="0.0" y="611" width="375" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                         </subviews>
@@ -55,11 +55,11 @@
             <objects>
                 <viewController id="GY5-u1-xPG" customClass="DetailOfMovieViewController" customModule="movieDBapp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="va6-xp-2ro">
-                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZB2-z6-ad7">
-                                <rect key="frame" x="0.0" y="32" width="240" height="358"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cellTest" translatesAutoresizingMaskIntoConstraints="NO" id="ZB2-z6-ad7">
+                                <rect key="frame" x="0.0" y="64" width="375" height="211"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="ZB2-z6-ad7" secondAttribute="height" multiplier="16:9" id="JGc-Df-0S6"/>
                                     <constraint firstAttribute="width" secondItem="ZB2-z6-ad7" secondAttribute="height" multiplier="0.67:1" id="Xk5-kv-e4S"/>
@@ -77,7 +77,7 @@
                                 </variation>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="khx-7d-Gcc">
-                                <rect key="frame" x="255" y="92" width="397" height="268"/>
+                                <rect key="frame" x="15" y="330" width="345" height="322"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genres" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HsD-Zl-0Cl">
                                         <rect key="frame" x="0.0" y="0.0" width="59" height="20.5"/>
@@ -91,8 +91,8 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kec-nQ-xeU">
-                                        <rect key="frame" x="0.0" y="80.5" width="38.5" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Release date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kec-nQ-xeU">
+                                        <rect key="frame" x="0.0" y="80.5" width="105" height="20.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -110,7 +110,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zEa-oT-THM">
-                                        <rect key="frame" x="0.0" y="157" width="397" height="111"/>
+                                        <rect key="frame" x="0.0" y="157" width="345" height="165"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -123,7 +123,7 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qeL-8l-NA1">
-                                <rect key="frame" x="255" y="47" width="397" height="30"/>
+                                <rect key="frame" x="15" y="285" width="345" height="30"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="WwG-SH-n8i"/>
@@ -133,10 +133,17 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rz2-yz-Cg6">
+                                <rect key="frame" x="15" y="239.5" width="345" height="20.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="LcC-RL-tMA" firstAttribute="trailing" secondItem="khx-7d-Gcc" secondAttribute="trailing" constant="15" id="7Do-Ny-953"/>
+                            <constraint firstItem="Rz2-yz-Cg6" firstAttribute="leading" secondItem="ZB2-z6-ad7" secondAttribute="leading" constant="15" id="95k-c3-WIw"/>
                             <constraint firstItem="khx-7d-Gcc" firstAttribute="top" secondItem="qeL-8l-NA1" secondAttribute="bottom" constant="15" id="IHM-NP-dlM"/>
                             <constraint firstItem="qeL-8l-NA1" firstAttribute="top" secondItem="LcC-RL-tMA" secondAttribute="top" constant="15" id="Ieo-Ya-3Y1"/>
                             <constraint firstItem="ZB2-z6-ad7" firstAttribute="leading" secondItem="LcC-RL-tMA" secondAttribute="leading" id="JUr-72-cW0"/>
@@ -145,10 +152,12 @@
                             <constraint firstItem="LcC-RL-tMA" firstAttribute="bottom" secondItem="khx-7d-Gcc" secondAttribute="bottom" constant="15" id="QRp-PF-icw"/>
                             <constraint firstItem="LcC-RL-tMA" firstAttribute="trailing" secondItem="ZB2-z6-ad7" secondAttribute="trailing" id="VR2-Gw-idm"/>
                             <constraint firstItem="qeL-8l-NA1" firstAttribute="top" secondItem="ZB2-z6-ad7" secondAttribute="bottom" constant="10" id="Yys-cb-CqE"/>
+                            <constraint firstItem="ZB2-z6-ad7" firstAttribute="trailing" secondItem="Rz2-yz-Cg6" secondAttribute="trailing" constant="15" id="aRP-8g-qIF"/>
                             <constraint firstItem="LcC-RL-tMA" firstAttribute="trailing" secondItem="qeL-8l-NA1" secondAttribute="trailing" constant="15" id="f2Y-ZD-SKE"/>
                             <constraint firstItem="qeL-8l-NA1" firstAttribute="leading" secondItem="LcC-RL-tMA" secondAttribute="leading" constant="15" id="jq3-Bq-NVE"/>
                             <constraint firstItem="khx-7d-Gcc" firstAttribute="leading" secondItem="qeL-8l-NA1" secondAttribute="leading" id="opc-uV-hf2"/>
                             <constraint firstItem="ZB2-z6-ad7" firstAttribute="top" secondItem="LcC-RL-tMA" secondAttribute="top" id="s59-Zp-8ko"/>
+                            <constraint firstItem="ZB2-z6-ad7" firstAttribute="bottom" secondItem="Rz2-yz-Cg6" secondAttribute="bottom" constant="15" id="wIQ-Aj-vlY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="LcC-RL-tMA"/>
                         <variation key="default">
@@ -174,6 +183,7 @@
                         <outlet property="genresLabel" destination="i8G-D9-mfc" id="LZ4-qy-ejc"/>
                         <outlet property="overviewTextView" destination="zEa-oT-THM" id="JWd-yt-2QB"/>
                         <outlet property="posterImageView" destination="ZB2-z6-ad7" id="8ei-d7-Bhv"/>
+                        <outlet property="titleLabel" destination="Rz2-yz-Cg6" id="zLl-Yo-ja3"/>
                         <outlet property="trailerButton" destination="qeL-8l-NA1" id="P4r-zW-aJh"/>
                     </connections>
                 </viewController>
@@ -187,7 +197,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="FtT-2g-b1c" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LC1-oY-noS">
-                        <rect key="frame" x="0.0" y="0.0" width="667" height="32"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -200,4 +210,7 @@
             <point key="canvasLocation" x="136.80000000000001" y="792.95352323838085"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="cellTest" width="500" height="281"/>
+    </resources>
 </document>
